# arango-workflow-app

./: .env.example  .gitignore  Makefile  README.md  README_Agent.md  README_PLANNING_2026-05-23.md  app.yaml  databricks.yml  deploy_app.sh  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  run_local.py  update_arango_workflow_registry_uc.sh
datasets/: .seed_manifest.json  README.md
datasets/corpora/: .gitignore  README.md
datasets/cyber/: README.md  fraud_cyber_dataset.json  fraud_cyber_ontology_arango.jsonld  fraud_signals.csv  fraud_signals.json  ips.csv
datasets/financial/: 10k-excerpt-acme.md  loan-agreement-excerpt.md  regulatory-notice.md
datasets/fraud_cyber_graph_dataset/: attack_patterns.csv  attack_patterns.json  combined_graph.json  devices.csv  edges.csv  fraud_signals.csv  fraud_signals.json  ips.csv  ips.json  transactions.csv  transactions.json
datasets/healthcare/: clinical-guideline-summary.md  drug-monograph.md
datasets/legal/: case-summary.md  privacy-policy-excerpt.md
docs/: EMBEDDINGS_DATABRICKS.md
resources/: arango_workflow.app.yml
scripts/: _app_yaml_env.sh  _databricks_sql_lib.sh  _deploy_app_print_urls.sh  debug_deployed_app.sh  dev-local.sh  ensure-backend-deps.sh  ensure_serving_endpoints.py  frontend-install.sh  grant_autograph_serving_permissions.py  inject_app_yaml_secrets.py  load_deploy_dotenv.py  print_effective_peer_urls.py  probe_serving_endpoints.sh  query_uc_registry_tables.py  read_app_yaml_env.py  read_uc_peer_registry.sh  seed_workflow_volume_datasets.py  set_user_api_scopes.sh  start-databricks-app.sh
src/: asgi.py
tests/: AGENTS.md  conftest.py  test_health.py
(+603 files in other folders)
